<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_EventMetadata" Id="{74710da5-a651-44f3-bfaa-9f3d480014fb}">
    <Declaration><![CDATA[TYPE ST_EventMetadata :
STRUCT
    nEventId          : UDINT;
    eSeverity         : TcEventSeverity;
    bWithConfirmation : BOOL;
	bWithResetOperation : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>